syntax = "proto3";

package order;

option go_package = "github.com/SabinGhost19/go-micro-payment/proto/orderpb";

// Order service for placing and querying orders
service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse) {}
  rpc GetOrder (GetOrderRequest) returns (OrderResponse) {}
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {}
}

// Create order request
message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string address = 3;
}

// Get order details
message GetOrderRequest {
  string order_id = 1;
}

// List orders for a user
message ListOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// A single item in order
message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

// Order response details
message OrderResponse {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  string status = 4; // e.g., PLACED, PAID, SHIPPED, CANCELED
  double total_amount = 5;
  string created_at = 6;
}

// List response
message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}
